[package]
name = "pinyin"
version = "0.1.0"
description = "A Tauri App"
authors = ["Annya"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pinyin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dollop = { git = "https://github.com/An-n-ya/dollop", branch = "main"}
reqwest = { version = "0.12.28", features = ["json"] }
thiserror = "2.0.18"
rodio = "0.21.1"
byteorder = "1.5.0"
reqwest-websocket = "0.5.1"
futures-util = "0.3.31"
futures-lite = "2.6.1"
tauri-plugin-log = "2"
log = "0.4"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
